# c7n-azure-aca

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  update-deps.yml
infra/: .gitignore  azuredeploy.bicep  azuredeploy.json  main.bicep  main.bicepparam  main.json
infra/modules/: alerts.bicep  container-apps-env.bicep  container-apps-job-event.bicep  container-apps-job-schedule.bicep  custom-role-definition.bicep  event-grid.bicep  identity.bicep  log-analytics.bicep  role-assignment-resource-group.bicep  role-assignment-subscription.bicep  role-assignments.bicep  storage.bicep
src/c7n_azure_aca/: __main__.py  event_matcher.py  handler.py  policy_loader.py
src/c7n_azure_container_apps/: __init__.py  __main__.py  handler.py
tests/: conftest.py  test_event_matcher.py  test_handler.py  test_modes.py  test_policy_loader.py
tests/integration/policies/: test-event.yml  test-periodic.yml
tests/integration/scripts/: run-tests.sh  setup.sh  teardown.sh
