[project]
name = "c7n-azure-container-apps"
version = "0.1.0"
description = "Cloud Custodian policy execution on Azure Container Apps Jobs"
requires-python = ">=3.11,<4.0"
license = "Apache-2.0"
dependencies = [
    "c7n>=0.9,<1.0",
    "c7n-azure>=0.7,<1.0",
    "pyyaml>=6.0",
]

[project.scripts]
c7n-aca = "c7n_azure_container_apps.handler:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/c7n_azure_container_apps"]

[tool.uv]
prerelease = "if-necessary-or-explicit"
exclude-newer = "2026-04-30T00:00:00Z"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=c7n_azure_container_apps",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=70",
    "-v",
    "--tb=short",
]

[tool.coverage.run]
source = ["src/c7n_azure_container_apps"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]
